@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?> 
-<DNPreBuild xmlns="http://dnpb.sourceforge.net/schemas/dnpb-1.6.xsd">
+<Prebuild xmlns="http://dnpb.sourceforge.net/schemas/prebuild-1.6.xsd">
     <Solution name="Prebuild">
 	<Configuration name="Debug">
 	    <Options>
@@ -11,9 +11,9 @@
 		<OptimizeCode>false</OptimizeCode>
 		<OutputPath>bin\Debug</OutputPath>
 		<DebugInformation>true</DebugInformation>
+		<SuppressWarnings>1595</SuppressWarnings>
 	    </Options>
 	</Configuration>
-
 	<Configuration name="Release">
 	    <Options>
 		<?if OS = "Win32" ?>
@@ -24,19 +24,49 @@
 		<OutputPath>bin\Release</OutputPath>
 		<OptimizeCode>true</OptimizeCode>
 		<DebugInformation>false</DebugInformation>
+		<SuppressWarnings>1595</SuppressWarnings>
 	    </Options>
 	</Configuration>
 	<Files>
 	    <File>prebuild.xml</File>
-	    <Match path="doc\" pattern="*.txt"/>
+	    <Match path="doc" pattern="*.txt"/>
 	</Files>
-	<Project name="Prebuild" path="src\" language="C#" assemblyName="Prebuild" icon="..\\Prebuild.ico" type="Exe" rootNamespace="DNPreBuild">
+	<Project name="Prebuild" path="src" language="C#" assemblyName="Prebuild" icon="App.ico" type="Exe" rootNamespace="Prebuild" startupObject="Prebuild.Prebuild">
+	    <Configuration name="Debug">
+		<Options>
+		    <?if OS = "Win32" ?>
+		    <CompilerDefines>DEBUG;TRACE;WIN32;NET</CompilerDefines>
+		    <?else ?>
+		    <CompilerDefines>DEBUG;TRACE;POSIX</CompilerDefines>
+		    <?endif ?>
+		    <OptimizeCode>false</OptimizeCode>
+		    <OutputPath>bin\Debug</OutputPath>
+		    <DebugInformation>true</DebugInformation>
+		    <XmlDocFile>Prebuild.xml</XmlDocFile>
+		    <SuppressWarnings>1595</SuppressWarnings>
+		</Options>
+	    </Configuration>
+	    <Configuration name="Release">
+		<Options>
+		    <?if OS = "Win32" ?>
+		    <CompilerDefines>TRACE;WIN32;NET</CompilerDefines>
+		    <?else ?>
+		    <CompilerDefines>TRACE;POSIX</CompilerDefines>
+		    <?endif ?>
+		    <OutputPath>bin\Release</OutputPath>
+		    <OptimizeCode>true</OptimizeCode>
+		    <DebugInformation>false</DebugInformation>
+		    <XmlDocFile>Prebuild.xml</XmlDocFile>
+		    <SuppressWarnings>1595</SuppressWarnings>
+		</Options>
+	    </Configuration>
 	    <Reference name="System.Xml" />
 	    <Reference name="System" />
 	    <Files>
-		<Match path="data" pattern="dnpb-1.6.xsd" buildAction="EmbeddedResource"/>
-		<Match pattern="*.cs" recurse="true"/>				
+		<Match pattern="App.ico" buildAction="EmbeddedResource"/>
+		<Match path="data" pattern="prebuild-1.6.xsd" buildAction="EmbeddedResource"/>
+		<Match pattern="*.cs" recurse="true"/>			
 	    </Files>
 	</Project>
     </Solution>
-</DNPreBuild>
+</Prebuild>
